# POD-of-three-dimensional-flow-field-data

./: .gitignore  POD Flow.spec  README.md  pyproject.toml  run_podflow.bat
app/: __init__.py  __main__.py  cli.py  main.py  ui_tk.py
app/io/: dat_parser.py  export.py  project_io.py
app/pod/: pod_compute.py
app/utils/: logging.py  models.py  validators.py
scripts/: generate_synthetic_dat.py  restructure_mode_to_dat.py
tests/4-shao-经典工况-近场-减去时均/: mean.csv  metadata.json
tests/4-shao-经典工况-近场-减去时均/1/: coords.csv  metadata.json  modal_metrics_wide.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_001/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_002/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_003/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_004/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_005/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_006/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_007/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_008/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_009/: coefficients.csv  coefficients_fft.csv  mode.csv
tests/4-shao-经典工况-近场-减去时均/1/per_mode/mode_010/: coefficients.csv  coefficients_fft.csv  mode.csv
(+870 files in other folders)
